layui date component

--- a/spring-boot-distributedlock/src/main/resources/templates/user/list.html
+++ b/spring-boot-distributedlock/src/main/resources/templates/user/list.html
@@ -15,10 +15,10 @@
                     <input type="text" id="name" name="name" placeholder="姓名" class="layui-input"/>
                 </div>
                 <div class="layui-input-inline">
-                    <input type="text" id="startTime" name="startTime" placeholder="开始时间" class="layui-input"/>
+                    <input type="text" id="startTime" name="startTime" placeholder="开始时间" class="layui-input" th:readonly="true"/>
                 </div>
                 <div class="layui-input-inline">
-                    <input type="text" id="endTime" name="endTime" placeholder="结束时间" class="layui-input"/>
+                    <input type="text" id="endTime" name="endTime" placeholder="结束时间" class="layui-input" th:readonly="true"/>
                 </div>
             </div>
 
