--- a/spring-boot-distributedlock/src/main/resources/templates/user/add.html
+++ b/spring-boot-distributedlock/src/main/resources/templates/user/add.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>用户信息编辑</title>
+    <title>用户信息新增</title>
     <link rel="stylesheet" th:href="@{/layui.2.2.3/layui/css/layui.css}" media="all"/>
 </head>
 <body class="childrenBody">
@@ -12,29 +12,28 @@
         <div class="layui-form-item">
             <label class="layui-form-label">姓名</label>
             <div class="layui-input-block">
-                <input type="hidden" name="id" th:value="${user.id}" />
-                <input type="text" name="name" th:value="${user.name}" class="layui-input" th:readonly="true" />
+                <input type="text" name="name" class="layui-input" lay-verify="required"/>
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-block">
-                <input type="text" name="sex" th:value="${user.sex}" class="layui-input" th:readonly="true" />
+                <input type="text" name="sex" class="layui-input" lay-verify="required" />
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">年龄</label>
             <div class="layui-input-block">
-                <input type="text" name="age" th:value="${user.age}" class="layui-input" th:readonly="true" />
+                <input type="text" name="age" class="layui-input" lay-verify="required" />
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">电话</label>
             <div class="layui-input-block">
-                <input type="text" name="mobile" th:value="${user.mobile}" class="layui-input" lay-verify="required" />
+                <input type="text" name="mobile" class="layui-input" lay-verify="required" />
             </div>
         </div>
 
