--- a/spring-boot-distributedlock/src/main/resources/templates/user/list.html
+++ b/spring-boot-distributedlock/src/main/resources/templates/user/list.html
@@ -34,6 +34,9 @@
             <div class="layui-inline">
                 <a class="layui-btn searchBtn"><i class="layui-icon">&#xe615;</i>查询</a>
             </div>
+            <div class="layui-inline">
+                <a class="layui-btn add"><i class="layui-icon">&#xe634;</i>添加</a>
+            </div>
         </blockquote>
     </form>
 </div>
