--- a/spring-boot-beetl/src/main/resources/view/web/index.html
+++ b/spring-boot-beetl/src/main/resources/view/web/index.html
@@ -9,5 +9,15 @@
 @var b = 1;
 @var c = a + b;
 <h1>${c}</h1>
+
+<div>
+    <p>
+    @if(auth.isHasAuthority("/admi")){
+        123
+    @}else{
+        456
+    @}
+    </p>
+</div>
 </body>
 </html>
