html标签、自定义方法

--- a/spring-boot-beetl/src/main/resources/templates/index1.html
+++ b/spring-boot-beetl/src/main/resources/templates/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>${beetl}</title>
+    <title>${beetl!}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 </head>
@@ -15,8 +15,8 @@ ctxPath是Beetl的默认共享变量，表示Web应用ContextPath
 -->
 <body>
 <h>默认共享变量ctxPath：${ctxPath}</h><br/>
-<p>共享变量：${beetlTitle}</p>
-<p>全局变量：${test}</p>
+<p>共享变量：${beetlTitle!}</p>
+<p>全局变量：${test!}</p>
 <p>临时变量：${a}</p>
 <p>遍历：<br>
     <table border="1">
@@ -46,4 +46,11 @@ ctxPath是Beetl的默认共享变量，表示Web应用ContextPath
     --
     <% } %>
 </p>
+标签函数 layout（所谓标签函数，即允许处理模板文件里的一块内容，功能等于同jsp tag）：<br>
+<% layout("layout.html", {title: '主题'}){ %>
+Hello,this is main part
+<% } %>
+<br>
+自定义HTML标签：<br>
+<#input id="name" name="name" placeholder="请输入姓名"/>
 </body>
