--- a/spring-boot-beetl/src/main/resources/templates/index2.html
+++ b/spring-boot-beetl/src/main/resources/templates/index2.html
@@ -2,21 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>${beetl}</title>
+    <title>${beetl!}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 </head>
 <!-- 定义临时变量，默认定界符<% %> -->
-<%
-var a = "123";
-%>
+@var a = "123";
 <!--
 ctxPath是Beetl的默认共享变量，表示Web应用ContextPath
 -->
 <body>
 <h>默认共享变量ctxPath：${ctxPath}</h><br/>
-<p>共享变量：${beetlTitle}</p>
-<p>全局变量：${test}</p>
+<p>共享变量：${beetlTitle!}</p>
+<p>全局变量：${test!}</p>
 <p>临时变量：${a}</p>
 <p>遍历：<br>
     <table border="1">
@@ -26,24 +24,37 @@ ctxPath是Beetl的默认共享变量，表示Web应用ContextPath
         <th>创建时间</th>
         <th>更新时间</th>
     </tr>
-    <% for(user in users){ %>
+    @for(user in users){
     <tr>
         <td>${user.name}</td>
         <td>${user.age}</td>
         <td>${user.createTime, "yyyy-MM-dd HH:mm:ss"}</td>
         <td>${user.updateTime, "yyyy-MM-dd HH:mm:ss"}</td>
     </tr>
-    <%}%>
+    @}
 </table>
 </p>
 <p>安全输出：<br>
     ${users[0].name!}&nbsp; ${users[0].extFields!"Gita"}
 </p>
 <p>内置方法：<br>
-    <% if(isNotEmpty(users[0].age)){ %>
+    @if(isNotEmpty(users[0].age)){
     ${users[0].age}
-    <% }else{ %>
+    @}else{
     --
-    <% } %>
+    @}
+</p>
+标签函数 layout（所谓标签函数，即允许处理模板文件里的一块内容，功能等于同jsp tag）：<br>
+@layout("layout.html", {title: '主题'}){
+Hello,this is main part
+@}
+<br>
+自定义HTML标签：<br>
+<#input id="name" name="name" placeholder="请输入姓名"/>
+<p>自定义函数：<br>
+    ${printTime(users[0].createTime!,"yyyy-MM-dd HH:mm:ss")}
+</p>
+<p>调用java方法：<br>
+    ${@com.darren.center.springboot.utils.TimeUtils.formatDate(users[0].createTime!,"yyyy-MM-dd HH:mm:ss")}
 </p>
 </body>
