--- a/spring-boot-beetl/src/main/resources/templates/layout.html
+++ b/spring-boot-beetl/src/main/resources/templates/layout.html
@@ -7,5 +7,15 @@
 <body>
 title is ${title} <br>
 layoutContent is ${layoutContent}
+@if(isEmpty(isShow)){
+@#ajax tags:{
+<h3 style="color: red">ajax局部渲染</h3>
+<ul>
+    @for(dict in dicts!){
+    <li>${dict.dictName}</li>
+    @}
+</ul>
+@}
+@}
 </body>
 </html>
